add status update

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,10 @@
             <div class="col-md-4">
                 <%= render 'status_updates/form' %>
                 <% @status_updates.each do |status| %>
-                    <div class="card card-block">
+                    <div class="card <%= 'card-block' if status.image.nil? %>" >
+                        <% unless status.image.nil? %>
+                            <img src="<%= status.image %>" class="card-img-top" width="100%">
+                        <% end %>
                         <p><%= status.user.profile.full_name %></p>
                         <p><%= status.status %></P>
                         <p>Posted <%= time_ago_in_words(status.created_at) %> ago</p>
